# pdf-editor

./: Makefile  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: mypy.ini  settings.py  urls.py
backend/containers/django/: Dockerfile
backend/containers/nginx/conf.d/: default.conf
backend/pdfs/: models.py  serializers.py  urls.py  views.py
backend/pdfs/migrations/: 0001_initial.py
database/: pg_20241104134951.dump  pg_dump_20241104133455.sql
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx  utils.ts
frontend/src/api/: handlers.ts  hooks.ts
frontend/src/config/: index.ts
frontend/src/editor/: Editor.tsx  utils.ts
frontend/src/form-and-viewer/: FormAndViewer.tsx  index.ts
frontend/src/hooks/: index.ts  pdf-template.ts
frontend/src/utils/: case-converter.ts  index.ts  pdf.ts
